--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html, body {
   margin: 0;
+  padding: 0;
   height: 100%;
   background: #000;
   font-family: system-ui, sans-serif;
@@ -7,7 +8,7 @@ html, body {
 }
 
 #sidebar {
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   bottom: 0;
@@ -19,17 +20,10 @@ html, body {
 }
 
 #map {
-  position: absolute;
-  left: 260px;
-  right: 0;
+  position: fixed;
   top: 0;
   bottom: 0;
-}
-
-.comune-label {
-  color: #00ff9c;
-  font-size: 11px;
-  font-weight: 600;
-  text-shadow: 0 0 6px #00ff9c;
-  pointer-events: none;
+  left: 260px;
+  right: 0;
+  background: #000;
 }
